connect database to create and get all user
